<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.archirayan.cabsbookdriver.activity.DriverAccessibilitysetting">

    <LinearLayout
        android:id="@+id/linear_acceptance_tital"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="#000000"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back_acceptance_tital"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:id="@+id/txt_acceptance_tital"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="Accessibility"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/accessibilitysettings"
            android:layout_width="match_parent"
            android:textColor="@color/theme_primary"
            android:textSize="@dimen/_14sdp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/driverprofile_accessi_txt1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/driverprofile_accessi_txt2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp" />
            </LinearLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:id="@+id/llayout_vibratornot"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="Vibrate on alert"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:text="Enable vibrations for all notificaitons"
                        android:textSize="@dimen/_11sdp" />
                </LinearLayout>

                <Switch
                    android:id="@+id/switch_vibratenot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
